<resources>
    <string name="app_name">SmartFit</string>
    <string name="app_in_name">SmartFit</string>
    <string name="app_in_after">RegisterApp</string>
    <string name="btnSignIn">SIGN IN</string>
    <string name="btnRegister">SIGN UP</string>
    <string name="text_bottom">Log in to your account</string>
    <string name="btnChooseExercises">Exercises</string>
    <string name="btnChooseCalculator">Calorie calculator</string>
    <string name="title_activity_exercises">ExercisesActivity</string>
    <string name="transition">transition</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
...
