...
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
...
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passField"
            android:hint="Password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
...
